css variables added

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+:root {
+  --accent-color: rgb(0, 87, 183);
+  --secondary-color: rgba(255, 215, 0, 0.5);
+  --hover-transition: 0.7s;
+}
+
 body {
   text-align: center;
   width: 70%;
@@ -7,7 +13,7 @@ body {
 h1 {
   font-size: 50px;
   margin: 10px 0px;
-  color: blue;
+  color: var(--accent-color);
 }
 
 h2 {
@@ -34,13 +40,18 @@ a {
 }
 
 a:hover {
-  color: blue;
-  text-transform: uppercase;
-  transition: cubic-bezier(0.075, 0.82, 0.165, 1);
+  color: var(--accent-color);
+  transition: var(--hover-transition);
 }
 
 li {
   list-style: none;
+}
+
+/* homepage */
+
+.name-heading {
+  margin-bottom: 35px;
 }
 
 .buttons-container {
@@ -51,15 +62,14 @@ li {
 
 .button {
   margin: 30px;
-  border: solid 1px blue;
+  border: solid 1px var(--accent-color);
   border-radius: 5px;
-  box-shadow: 0px 3px 7px 3px blue;
+  box-shadow: 0px 3px 7px 3px var(--accent-color);
 }
 
 .button:hover {
-  text-transform: uppercase;
-  transition: 500ms;
-  background-color: orange;
+  transition: var(--hover-transition);
+  background-color: var(--secondary-color);
 }
 
 /* about */
@@ -67,10 +77,6 @@ li {
 .back-to-homepage {
   text-decoration: underline;
   margin-top: 40px;
-}
-
-.back-to-homepage:hover {
-  text-transform: none;
 }
 
 .about-me-heading {
@@ -82,10 +88,12 @@ li {
 }
 .text {
   text-align: justify;
-  margin: 30px;
+  margin: 15px;
+  background-color: var(--secondary-color);
+  padding: 10px;
 }
 
 .contact-me-heading {
-  color: blue;
+  color: var(--accent-color);
   font-size: 40px;
 }
