images added to about page, images moves to folder and renamed

--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,12 @@ li {
   list-style: none;
 }
 
+.portfolio-about-image {
+  max-width: 100%;
+  height: auto;
+  margin: 10px;
+}
+
 /* homepage */
 
 .name-heading {
