button text css added

--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,6 @@
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
-/* utility classes */
-
 body {
   text-align: center;
   margin: 50px auto;
@@ -35,15 +33,7 @@ h4 {
 
 a {
   display: block;
-  color: black;
-  text-decoration: none;
-  font-weight: bold;
   padding: 10px 20px;
-}
-
-a:hover {
-  color: var(--accent-color);
-  transition: var(--hover-transition);
 }
 
 li {
@@ -69,13 +59,16 @@ li {
 }
 
 .button {
+  background-color: var(--accent-color);
   margin: 30px;
   border: solid 1px var(--accent-color);
   border-radius: 5px;
+  padding: 15px;
   box-shadow: var(--box-shadow);
 }
 
 .button:hover {
+  color: var(--accent-color);
   transition: var(--hover-transition);
   background-color: var(--secondary-color);
 }
@@ -108,4 +101,12 @@ li {
 .contact-me-heading {
   color: var(--accent-color);
   font-size: 40px;
+}
+
+/* utility classes */
+.button-text {
+  text-decoration: none;
+  color: whitesmoke;
+  font-size: 16px;
+  font-weight: bold;
 }
