--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,15 @@ a:hover {
     font-size: 14px;
   }
 
+  footer p {
+    font-size: 10px;
+  }
+
+  footer p a {
+    color: black;
+    text-decoration: none;
+  }
+
   .greeting {
     display: none;
   }
